syntax = "proto3";
package avcli;

import "google/protobuf/empty.proto";

service AvCli {
	rpc Swab(ID) returns (stream SwabResult) {}
	rpc Float(ID) returns (stream FloatResult) {}
	rpc Screenshot(ID) returns (ScreenshotResult) {}
	rpc DuplicateRoom(DuplicateRoomRequest) returns (google.protobuf.Empty) {}
	// rpc FixTime(ID) returns (stream FixTimeResult) {}
	// rpc Sink(ID) returns (stream SinkResult) {}
	// Smee ones
}

message ID {
	string id = 1;
	string designation = 2;
}

message SwabResult {
	string id = 1;
	string error = 2;
}

message FloatResult {
	string id = 1;
	string error = 2;
}

message FixTimeResult {
	string id = 1;
	string error = 2;
}

message SinkResult {
	string id = 1;
	string error = 2;
}

message ScreenshotResult {
	bytes photo = 1;
}

message DuplicateRoomRequest {
	string fromID = 1;
	string toID = 2;
}
